fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ nav {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 0.5rem;
+  gap: 1px;
 }
 
 .col-8 {
